<resources>
    <string name="strings____Dialog_UpdateInfo____updates">
[0.163.25051101] Update:\n
- I retried the update from a month ago for linking Google accounts with FlareNote accounts via FlareNoteUploader.\n
- By linking the accounts, you can easily use the same FlareNote account even when changing devices or using multiple devices.\n
- If you encounter any issues, please contact us on X (@DDRScoreManager).
    </string>
    <string name="strings_global____app_name">DDR Score Manager A</string>
    <string name="strings_global____leader">...</string>
    <string name="strings_global____ok">OK</string>
    <string name="strings_global____save">Save</string>
    <string name="strings_global____cancel">Cancel</string>
    <string name="editcopyformats">Edit copy formats...</string>
    <string name="copyformats">Copy Formats</string>
    <string name="copyformatlegends">* Legends.\n
\n
%t% - Music Title\n
%p:b:B:D:E:C% - Pattern Type\n
%y:SP:DP% - Play Style\n
%d% - Difficulty\n
%s% - Score\n
%l% - Dance Level\n
%f:MFC:PFC:FC:GFC:Life4:NoFC% - FullCombo Type\n
%c% - Max Combo\n
%e% - Clear Count\n
%a% - Play Count\n
\n
* Following options are available for Score, Difficulty, Max Combo, Clear Count, Play Count.\n
\n
“%s0%” -> “0987650”\n
“%s %” -> “ 987650”\n
“%s0,%” -> “0,987,650”\n
	</string>
    <string name="score">Scores</string>
    <string name="scoremax">Max</string>
    <string name="scoremin">Min</string>
    <string name="scoremedian">Median</string>
    <string name="scoreaverage">Average</string>
    <string name="scorevariance">Variance</string>
    <string name="dancelevel">Dance Level</string>
    <string name="fullcombotype">Fullcombo Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="patterntype">Pattern Type</string>
    <string name="version">Series Title</string>
    <string name="flarerank">Flare Rank</string>
    <string name="refresh_musiclist">Update Music List</string>
    <string name="no_update">No Update.</string>
    <string name="musiclist_updated">Updated.</string>
    <string name="invalid_data">Received invalid data.</string>
    <string name="editing">Music List File is now editing. Please wait to update.</string>
    <string name="timedout">Timeout.</string>
    <string name="visible_item">Visible Item</string>
    <string name="show_maxcombo">Max Combo</string>
    <string name="show_score">Score</string>
    <string name="show_dancelevel">Dance Level</string>
    <string name="show_playcount">Play Count</string>
    <string name="show_clearcount">Clear Count</string>
    <string name="visible_password">Visible password</string>
    <string name="input_ddr_sa_id_password">Input ID/Password</string>
    <string name="input_ddr_sa_information">Input DDR-CODE and Password on DDR Skill Attack.\nApp will save encrypted password on your phone.</string>
    <string name="authenticating">Authenticating...</string>
    <string name="authentication_failure">Authentication Failure.</string>
    <string name="authentication_succeed">Authentication Succeed. Next, press Export button.</string>
    <string name="export_check_title">Export to DDA SA</string>
    <string name="export_check">Do you want to export?</string>
    <string name="exporting">Exporting...</string>
    <string name="export_succeed">Export succeed.</string>
    <string name="exported_scores">Exported</string>
    <string name="exported_count">Count: </string>
    <string name="music_list">Music List</string>
    <string name="auto_update_music_list">Auto Update Music List</string>
    <string name="update_music_list_now">Update Music List Now</string>
    <string name="error_noitem">No target</string>
    <string name="textsizesetting_preview">Change your text size over to preview lower.</string>
    <string name="use_old_draw">Use old style drawing</string>
    <string name="name_different_alert">Music name web syte had given is different to selected music name.(Please report to us.)</string>
    <string name="illegal_id_alert">Illegal music id. Please try to "Get music IDs and all scores".</string>
    <string name="show_comments">Show comments</string>
    <string name="reset_socres">Reset scores</string>
    <string name="shock_arrow">Shock Arrows</string>
    <string name="shock_arrow_only">Only</string>
    <string name="shock_arrow_include">Include</string>
    <string name="shock_arrow_exclude">Exclude</string>
    <string name="dialog_gettin_status">Getting Status</string>
    <string name="dialog_log_get_status">Getting status page...</string>
    <string name="title_activity_status">Player Status</string>
	<string name="dialog_title_get_recent">Getting Recent</string>
	<string name="title_activity_change_log">Change log</string>
	<string name="dialog_log_get_rival_list">Getting rival list</string>
	<string name="title_activity_gate_login">Login</string>
	<string name="message_gate_login">Please login to GATE</string>
    <string name="message_gate_login_manually">When you detect you have logged in to GATE, press back button and close this window.</string>
	<string name="message_gate_loggedin">Logged in</string>
	<string name="message_gate_loggedin_failed">Failed to login</string>
	<string name="message_gate_already_logged_in_but_shown">Already logged in, but I couled not get data. Are you GATE "BASIC COURCE" member?</string>
	<string name="dialog_sou_myscore">Get my scores</string>
    <string name="dialog_sou_rivalscore">Get rival\'s scores</string>
    <string name="toast_added_to_mylist1">Added to </string>
    <string name="toast_added_to_mylist2">.</string>
    <string name="waiting">Waiting...</string>
    <string name="waiting_remaining">Remaining: </string>
    <string name="waiting_seconds"> seconds</string>
    <string name="dialog_copy_to_clipboard">Copy to clipboard</string>
    <string name="dialog_copied_to_clipboard">Copied to clipboard</string>
    <string name="dialog_from_gate">from Gate</string>
    <string name="dialog_direct_edit">Direct Edit</string>
    <string name="dialog_input_score">Input score</string>
    <string name="dialog_input_max_combo">Input combo</string>
    <string name="dialog_input_play_count">Input play count</string>
    <string name="dialog_input_clear_count">Input clear count</string>
    <string name="dialog_disp_all_pattern">Display all pattern</string>
    <string name="dialog_disp_song_memo">Memo</string>
    <string name="dialog_add_to_list">Add to MyList</string>
    <string name="dialog_new_list">--- Create List ---</string>
    <string name="dialog_remove_from_list">Remove from this MyList</string>
    <string name="there_is_no_items">Thre is no Items. Please check category you selected and your filter.</string>
    <string name="sou_progress_title">Getting scores</string>
    <string name="sou_progress_message">(゜д゜;)(Д゜ )彡(Д゜ #)(*゜д゜*)( ゜д)(（д゜ *）（Д゜ ）9m(゜д゜#)(*゜д゜*)(д゜ #)彡(д゜ ;)(゜д゜ )（゜д゜）</string>
    <string name="sou_dialog_title">(゜Д゜)</string>
    <string name="sou_dialog_message">"(（д゜ #）（. ゜д゜）(（゛д゛ ）(# ゜д)彡(（゜Д゜ ）9m（* ゜д）彡(（ ゜д゜#）彡( ゜Д)(д゜ ;)(#゜Д゜)(#゜д゜)(゜д゜ )( ゜Д゜#)( ゜д゜;)( ゜Д゜)彡(#゜д゜)(' ゜д)(（*゜д゜）彡（, ゜Д゜;）(' ゜д)（ ゜д゜;）（* ゜д）（д゜ ）(' ゜Д)(( ゜д゜ )彡(д゜,;)(（д゜ *）（Д゛ ;）(゜д゜;)(Д゜ *)( ゜д゜;)（゜д゜）(* ゜д)(' ゜д)(（д゜ ;）彡（д゜ *）(（'゜д゜`）（. ゜д゜ ）(Д゜ )(゜Д゜ ,)(Д゜ .)(;,゜Д)(. ゜Д)（д゜ ;）（゜ー゜）（Д゜ ）彡(゜д゜`)(（ ゜Д゜）（#゜Д゜）(（Д゜ ）（ ゛д゛#）(' ゜Д)(д゜ *)(*゜д゜)( ゜Д゜#)(' ゜д)(' ゜Д)(（ ゜Д）彡（゜д゜`）(*゜д゜)( ゜Д゜#)(д゜ #)(*゜Д゜)（゜Д゜）(（*゜Д゜）（ ゛д゛#）(（*゜д゜）彡(Д゛ ;)(（*゜Д゜）（゜Д゜*）(' ゜д)(（*゜Д゜）（゜Д゜*）(（* ゜Д）（*゜Д゜*）(' ゜Д)(д゜ )(*゜д゜)(#゜д゜)(( ゜д゜ )彡(д゜,;)(（д゜ *）（Д゛ ;）(' ゜Д)(（゜Д゜ ）9m(# ゜Д)(゜д゜ )(Д゜ *)( ゜д゜;)（゜д゜..(・ω・ )((Д゜ `)（゜Д゜.*）(゜д゜`)( ゜д゜#)(゜д゜*)(（# ゜д）彡( ゛д゛ )( ・ω・)(ω・ )(（ ゜д゜#）彡(゜д゜.;)（д゜..（゜д゜）(（* ゜д）('゜д゜)(（д゜ *）( ゜д゜ )彡(゜д゜`)(（ ゛д゛）（ ゜Д゜#）(（゜Д゜ ）9m(# ゜Д)(゜д゜;)(Д゜ *)( ゜д゜;)(д゜ *)（゜д゜）?"</string>
    <string name="sou_dialog_wakegawakaranaiyo">I cannot read this message.</string>
    <string name="sou_dialog_title_lang">Warning</string>
    <string name="sou_dialog_message_lang">Get all scores displayed. This operation will need a lot of time. Are you sure to continue?</string>
    <string name="get_from_list">Get scores and fullcombo states from GATE</string>
    <string name="get_from_list_message">Get scores and frullcombo states from GATE server.</string>
    <string name="manage_rivals_add_rival">Add new Rival</string>
    <string name="manage_rivals_add_rival_message">Empty and press OK to add scores from old version DDR SM.</string>
    <string name="manage_rivals_from_gate_title">Get Rival List</string>
    <string name="manage_rivals_from_gate">Get Rival List from GATE.</string>
    <string name="manage_rivals_from_gate_warning_title">Warning!</string>
    <string name="manage_rivals_from_gate_warning">If the Rival Data is not entered on the GATE, the Rival Data will be removed. You realy want to proceed?</string>
    <string name="manage_rivals_from_gate_overwrite">Overwrite</string>
    <string name="manage_rivals_from_gate_add">OK</string>
    <string name="manage_rivals_only_my_score">Only my scores</string>
    <string name="manage_rivals_scores_from_old_ddr_sm">Scores from old DDR SM</string>
    <string name="title_activity_manage_rivals">Rivals</string>
    <string name="manage_rivals_invalid_ddr_code">Invalid DDR-CODE !</string>
    <string name="manage_rivals_id">DDR-CODE</string>
    <string name="manage_rivals_name">Dancer-Name</string>
    <string name="menu_icon_content_description">menu</string>
    <string name="sou_icon_content_description">(゜Д゜)</string>
    <string name="title_activity_from_gate">Connecting to GATE...</string>
    <string name="from_gate_notif1">Automaticaly return to list when succeed getting data.</string>
    <string name="from_gate_notif2">If displayed the GATE login form, please log in and retry to get score.</string>
	<string name="strings____Activity_CategorySelect____notif_ast">*</string>
	<string name="strings____Activity_CategorySelect____notif_1">DDR Score Manager can detect score data from the GATE server.</string>
	<string name="strings____Activity_CategorySelect____notif_2">For keeping the GATE server service, please do not initiate a lot of access.</string>
	<string name="strings____Activity_CategorySelect____notif_3">You can hide Ad while 24-hours by making sure to tap it.</string>
    <string name="strings____Activity_DdrSa____exportToDdrSa">DDR Skill Attack</string>
    <string name="strings____Activity_DdrSa____authenticatedId">Authenticated ID: </string>
    <string name="strings____Activity_DdrSa____authenticatedIdDefault">Not authenticated. \nPress Authenticate button and authenticate DDR Skill Attack.</string>
    <string name="strings____Activity_DdrSa____export">\n\nExport\n\n</string>
    <string name="strings____Activity_DdrSa____openDdrSa">Open DDR Skill Attack web site</string>
    <string name="strings____Activity_DdrSa____openUserPage">Open user page</string>
    <string name="strings____Activity_DdrSa____authenticateDdrSa">\nAuthenticate DDR Skill Attack\n</string>
    <string name="strings____Activity_DdrSa____deleteAuthenticationData">\nDelete Authentication Data\n</string>
    <string name="flarenote_register_button">Register User</string>
    <string name="flarenote_send_data">Send Song Data</string>
    <string name="flarenote_input_user_name" translatable="false">Input user name</string>
    <string name="flarenote_top" translatable="false">FlareNote Top</string>
    <string name="flarenote_user_page">Your page</string>
    <string name="flarenote_delete_user">Delete User</string>
    <string name="flarenote_unregistered_user">Unregistered User</string>
    <string name="flarenote_google_linked_user">Google Account Linked User</string>
    <string name="flarenote_login_with_google">Login with Google Account</string>
    <string name="flarenote_disconnect_google">Disconnect Google Account</string>
    <string name="flarenote_connect_with_google">Connect with Google Account</string>
</resources>