<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#003399" >




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sou_icon_content_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#003399"
            android:padding="10dp"
            android:text="@string/strings____Activity_DdrSa____exportToDdrSa"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strings____Activity_DdrSa____authenticatedId"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/authenticatedId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/strings____Activity_DdrSa____authenticatedIdDefault"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Button
                android:id="@+id/export"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/strings____Activity_DdrSa____export" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/authenticate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strings____Activity_DdrSa____authenticateDdrSa" />

                <Button
                    android:id="@+id/deleteauthentication"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strings____Activity_DdrSa____deleteAuthenticationData" />

            </LinearLayout>

            <Button
                android:id="@+id/openUserPage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/strings____Activity_DdrSa____openUserPage" />
            
            <Button
                android:id="@+id/open"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/strings____Activity_DdrSa____openDdrSa" />

        </LinearLayout>
    
    </ScrollView>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>
   
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >
        </LinearLayout>
    
</LinearLayout>
