<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#003399" >






        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="fitCenter"
            android:contentDescription="@string/sou_icon_content_description"
            android:src="@drawable/ic_launcher" />
	


		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:text="@string/title_activity_from_gate"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_gate_notif1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/progress_color"
        android:max="110"
        android:minHeight="5dp"
        android:progressDrawable="@drawable/progress_color" />

    <TextView
        android:id="@+id/uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="horizontal|vertical" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_gate_notif2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

    </LinearLayout>

</LinearLayout>
